--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -15,12 +15,12 @@
             <div class="nav-title"></div>
             <div class="icon-list">
                 <ul>
-                    <li><a href="https://www.cnblogs.com/wangyang0210/" target="_self">首页</a></li>
-                    <li><a href="https://msg.cnblogs.com/send/wangyang0210" target="_blank">联系</a></li>
-                    <li><a href="https://www.cnblogs.com/wangyang0210/rss" target="_blank">订阅</a></li>
+                    <li><a href="https://www.cnblogs.com/adnny/" target="_self">首页</a></li>
+                    <li><a href="https://msg.cnblogs.com/send/adnny" target="_blank">联系</a></li>
+                    <li><a href="https://www.cnblogs.com/adnny/rss" target="_blank">订阅</a></li>
                     <li><a href="https://i.cnblogs.com/" target="_blank">管理</a></li>
                     <li><a href="https://i.cnblogs.com/EditPosts.aspx?opt=1" target="_blank">添加随笔</a></li>
-                    <li><a href="https://github.com/wangyang0210" target="_blank">GitHub</a></li>
+                    <li><a href="https://github.com/kwshare" target="_blank">GitHub</a></li>
                     <li><a href="https://www.cnblogs.com/" target="_blank">CNBlogs</a></li>
                 </ul>
             </div>
@@ -65,7 +65,8 @@
         </div>
     </div>
     <button class="menu-button" id="open-button">MENU</button>
-    <div class="content-wrap" id="content-wrap"></div><!-- /content-wrap -->
+    <div class="content-wrap" id="content-wrap"></div>
+    <!-- /content-wrap -->
 </div>
 <!-- menu html end -->
 
@@ -89,56 +90,55 @@
 
 <!-- global var -->
 <script type="text/javascript">
-
     //博客全局配置
     window.cnblogsConfig = {
 
         // ---- GitHub文件源配置 ----
         GhUserName: 'wangyang0210', // GitHub用户名(不是昵称)，注意大小写
         GhRepositories: 'Cnblogs-Theme-BNDong', // GitHub主题仓库名称
-        GhVersions : '7230170d646de3ac13f94af7a4f27a51d1d246cb', // GitHub发布版本或提交哈希值，根据版本加载代码，我有时候会提交代码进行调试，大家最好加载我仓库代码此处的版本 https://github.com/BNDong/Cnblogs-Theme-SimpleMemory/commits/master
+        GhVersions: '7230170d646de3ac13f94af7a4f27a51d1d246cb', // GitHub发布版本或提交哈希值，根据版本加载代码，我有时候会提交代码进行调试，大家最好加载我仓库代码此处的版本 https://github.com/BNDong/Cnblogs-Theme-SimpleMemory/commits/master
 
         // ---- 基础信息配置 ----custom
-        blogUser      : "。思索", // 博主名称，文章后缀和主页图片上都会使用此名称
-        blogAvatar    : "https://pic.cnblogs.com/avatar/1334215/20180504110551.png", // 用户头像URL
-        blogStartDate : "2018-2-12", // 入园时间，年-月-日，入园时间查看方法：鼠标停留园龄时间上，会显示入园时间
+        blogUser: "测试玉米君", // 博主名称，文章后缀和主页图片上都会使用此名称
+        blogAvatar: "https://pic.cnblogs.com/avatar/1781125/20190913152759.png", // 用户头像URL
+        blogStartDate: "2019-8-28", // 入园时间，年-月-日，入园时间查看方法：鼠标停留园龄时间上，会显示入园时间
 
         // ---- 菜单配置 ----
-        menuCustomList: { // 自定义菜单数据，显示在正常数据下方
-            "title1": { // 标题
-                "data": [ // 列表数据 ['列表', '链接']
-                    ['我的博客1', 'https://www.cnblogs.com/wangyang0210'],
-                    ['我的博客2', 'https://www.cnblogs.com/wangyang0210'],
-                    ['我的博客3', 'https://www.cnblogs.com/wangyang0210'],
-                    ['我的博客4', 'https://www.cnblogs.com/wangyang0210'],
-                    ['我的博客5', 'https://www.cnblogs.com/wangyang0210'],
-                ],
-                "icon": "icon-brush_fill" // 配置图标，参考文档：本博客字体图标库及其更换方法
-            },
-            "title2": { // 标题
-                "data": [ // 列表数据 ['列表', '链接']
-                    ['我的博客6', 'https://www.cnblogs.com/wangyang0210'],
-                    ['我的博客7', 'https://www.cnblogs.com/wangyang0210'],
-                    ['我的博客8', 'https://www.cnblogs.com/wangyang0210'],
-                    ['我的博客9', 'https://www.cnblogs.com/wangyang0210'],
-                    ['我的博客10', 'https://www.cnblogs.com/wangyang0210'],
-                ],
-                "icon": "icon-brush_fill" // 配置图标，参考文档：本博客字体图标库及其更换方法
-            },
-        },
+        // menuCustomList: { // 自定义菜单数据，显示在正常数据下方
+        //     "title1": { // 标题
+        //         "data": [ // 列表数据 ['列表', '链接']
+        //             ['我的博客1', 'https://www.cnblogs.com/adnny/'],
+        //             ['我的博客2', 'https://www.cnblogs.com/adnny/'],
+        //             ['我的博客3', 'https://www.cnblogs.com/adnny/'],
+        //             ['我的博客4', 'https://www.cnblogs.com/adnny/'],
+        //             ['我的博客5', 'https://www.cnblogs.com/adnny/'],
+        //         ],
+        //         "icon": "icon-brush_fill" // 配置图标，参考文档：本博客字体图标库及其更换方法
+        //     },
+        //     "title2": { // 标题
+        //         "data": [ // 列表数据 ['列表', '链接']
+        //             ['我的博客6', 'https://www.cnblogs.com/adnny/'],
+        //             ['我的博客7', 'https://www.cnblogs.com/adnny/'],
+        //             ['我的博客8', 'https://www.cnblogs.com/adnny/'],
+        //             ['我的博客9', 'https://www.cnblogs.com/adnny/'],
+        //             ['我的博客10', 'https://www.cnblogs.com/wangyang0210'],
+        //         ],
+        //         "icon": "icon-brush_fill" // 配置图标，参考文档：本博客字体图标库及其更换方法
+        //     },
+        // },
 
         // ---- 网站配置 ----
-        webpageTitleOnblur        : "(◍´꒳`◍) Hi, MyFriend", // 当前页失去焦点，页面title显示文字
-        webpageTitleOnblurTimeOut : 500, // 当前页失去焦点，页面title变化，延时时间，单位毫秒
-        webpageTitleFocus         : "(*´∇｀*) 欢迎回来！", // 当前页获取焦点，页面title显示文字，显示后延时恢复原title
-        webpageTitleFocusTimeOut  : 1000, // 当前页获取焦点，页面title变化，延时时间，单位毫秒
-        webpageIcon : "https://files.cnblogs.com/files/wangyang0210/blog_logo.gif", // 网站图标
+        webpageTitleOnblur: "(◍´꒳`◍) Hi, MyFriend", // 当前页失去焦点，页面title显示文字
+        webpageTitleOnblurTimeOut: 500, // 当前页失去焦点，页面title变化，延时时间，单位毫秒
+        webpageTitleFocus: "(*´∇｀*) 欢迎回来！", // 当前页获取焦点，页面title显示文字，显示后延时恢复原title
+        webpageTitleFocusTimeOut: 1000, // 当前页获取焦点，页面title变化，延时时间，单位毫秒
+        webpageIcon: "https://files.cnblogs.com/files/wangyang0210/blog_logo.gif", // 网站图标
 
         // ---- 进度条配置 ----
         progressBar: {
-            id      : 'top-progress-bar',
-            color   : '#77b6ff',
-            height  : '2px',
+            id: 'top-progress-bar',
+            color: '#77b6ff',
+            height: '2px',
             duration: 0.2
         },
 
@@ -160,7 +160,7 @@
                     child: '#272633'
                 },
                 alwaysForward: true, // When false the spring will reverse normally.
-                restAt: 0.5,         // A number from 0.1 to 0.9 || null for full rotation
+                restAt: 0.5, // A number from 0.1 to 0.9 || null for full rotation
                 renderBase: false
             }
         },
@@ -176,15 +176,15 @@
 
         essayTopAnimationRendered: true, // true || false ,是否渲染随笔页头图动效
         essayTopAnimation: { // 随笔页头图动效设置
-            triW : 14,
-            triH : 20,
-            neighbours : ["side", "top", "bottom"],
-            speedTrailAppear : .1,
-            speedTrailDisappear : .1,
-            speedTriOpen : 1,
-            trailMaxLength : 30,
-            trailIntervalCreation : 100,
-            delayBeforeDisappear : 2,
+            triW: 14,
+            triH: 20,
+            neighbours: ["side", "top", "bottom"],
+            speedTrailAppear: .1,
+            speedTrailDisappear: .1,
+            speedTriOpen: 1,
+            trailMaxLength: 30,
+            trailIntervalCreation: 100,
+            delayBeforeDisappear: 2,
             colors: [
                 '#96EDA6', '#5BC6A9',
                 '#38668C', '#374D84',
@@ -194,7 +194,7 @@
         },
 
         bgAnimationRendered: true, // true || false ,是否渲染背景动效
-        backgroundAnimation : { // 背景动效设置
+        backgroundAnimation: { // 背景动效设置
             colorSaturation: "60%",
             colorBrightness: "50%",
             colorAlpha: 0.5,
@@ -208,10 +208,18 @@
         },
 
         // ---- 主页配置 ----
-        homeTopImg    : [ // 主页图片Url，推荐尺寸>= 1920*1080，支持多张，每次刷新随机设置一张
-            "http://cache.wangyangyang.vip/hello.jpg",
-            "https://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-165678.jpg",
-            "http://cache.wangyangyang.vip/wallhaven-694674.jpg"
+        homeTopImg: [ // 主页图片Url，推荐尺寸>= 1920*1080，支持多张，每次刷新随机设置一张
+            "https://files.cnblogs.com/files/adnny/2017_9_9_Bing_.bmp",
+            "https://files.cnblogs.com/files/adnny/2017_9_2_Bing_.bmp",
+            "https://files.cnblogs.com/files/adnny/2017_9_4_Bing_.bmp",
+            "https://files.cnblogs.com/files/adnny/2017_9_9_Bing_en-ww.bmp",
+            "https://files.cnblogs.com/files/adnny/2017_9_23_Bing_.bmp",
+            "https://files.cnblogs.com/files/adnny/2017_9_23_Bing_en-US.bmp",
+            "https://files.cnblogs.com/files/adnny/2017_8_27_Bing_en-IN.bmp",
+            "https://files.cnblogs.com/files/adnny/2017_8_27_Bing_en-AU.bmp",
+            "https://files.cnblogs.com/files/adnny/2017_8_27_Bing_de-DE.bmp",
+            "https://files.cnblogs.com/files/adnny/2017_8_27_Bing_.bmp",
+            "https://files.cnblogs.com/files/adnny/wallhaven-w8o6m7.bmp",
         ],
         homeBannerText: "", // 主页头图上的标语，设置此选项会固定显示文字，默认为空，自动获取一句。
 
@@ -222,50 +230,53 @@
         ],
         essayCodeHighlightingType: 'cnblogs', // 代码主题插件类型：cnblogs || highlightjs || prettify
         essayCodeHighlighting: 'cnblogs', // 代码高亮主题，具体主题参考文档
-        essaySuffix:{ // 随笔后缀处配置
-            aboutHtml    : '', // 关于博主，不配置使用默认
+        essaySuffix: { // 随笔后缀处配置
+            aboutHtml: '', // 关于博主，不配置使用默认
             copyrightHtml: '', // 版权声明，不配置使用默认
-            supportHtml  : ''  // 声援博主，不配置使用默认
+            supportHtml: '' // 声援博主，不配置使用默认
         },
 
         // ---- 页脚配置 ----
         bottomBlogroll: [ // 友情链接，[[链接名,链接]....]
-            ["王洋", 'http://www.wangyangyang.vip'],
-            ["申请坑位", 'https://msg.cnblogs.com/send/wangyang0210'],
-            ["申请坑位", 'https://msg.cnblogs.com/send/wangyang0210'],
-            ["申请坑位", 'https://msg.cnblogs.com/send/wangyang0210'],
-            ["申请坑位", 'https://msg.cnblogs.com/send/wangyang0210'],
+            // ["王洋", 'http://www.wangyangyang.vip'],
+            ["。思索", 'https://msg.cnblogs.com/wangyang0210'],
+            ["申请坑位", 'https://www.cnblogs.com/adnny/'],
+            ["申请坑位", 'https://www.cnblogs.com/adnny/'],
+            ["申请坑位", 'https://www.cnblogs.com/adnny/'],
         ],
-        bottomText: {  // 页脚标语
+        bottomText: { // 页脚标语
             icon: "❤️",
-            left: "学无止境",
-            right: "谦卑而行"
+            left: "少壮不努力",
+            right: "长大继续学"
         },
 
         // ---- 控制台输出 ----
         consoleList: [
-        ['wangyang0210 CNBlogs', 'https://www.cnblogs.com/wangyang0210'],
-        ['wangyang0210 GitHub', 'https://github.com/wangyang0210'],
-        ['wangyang0210 Email', '2752154874@qq.com']
+            ['测试玉米君 CNBlogs', 'https://www.cnblogs.com/adnny/'],
+            ['测试玉米君 GitHub', 'https://github.com/kwshare'],
+            ['测试玉米君 Email', '125864004@qq.com']
         ],
     };
 
     // start cache
-    $.ajaxSetup({cache: true});
+    $.ajaxSetup({
+        cache: true
+    });
 
     // load loadingJs
-    $.getScript(getJsDelivrUrl('loading.js'), function () {
+    $.getScript(getJsDelivrUrl('loading.js'), function() {
 
         // Loading start
         pageLoading.initRebound();
         pageLoading.initSpinner();
         pageLoading.spinner.init(pageLoading.spring, true);
-        $.getScript(getJsDelivrUrl('jquery.mCustomScrollbar.min.js'), function () {
-            $.getScript(getJsDelivrUrl('require.min.js'), function () {
-                $.getScript(getJsDelivrUrl('config.js'), function () {
+        $.getScript(getJsDelivrUrl('jquery.mCustomScrollbar.min.js'), function() {
+            $.getScript(getJsDelivrUrl('require.min.js'), function() {
+                $.getScript(getJsDelivrUrl('config.js'), function() {
                     var staticResource = [
                         'optiscroll', 'ToProgress', 'rotate',
-                        'snapSvg', 'classie', 'main4', 'tools'];
+                        'snapSvg', 'classie', 'main4', 'tools'
+                    ];
                     require(staticResource, function() {
                         require(['base'], function() {
                             (new Base).init();
@@ -279,15 +290,18 @@
     // get file url
     function getJsDelivrUrl(file, directory) {
         file = setFileNameMin(file, directory);
-        return 'https://cdn.jsdelivr.net/gh/'+(window.cnblogsConfig.GhUserName)+'/'+(window.cnblogsConfig.GhRepositories)+'@'+(window.cnblogsConfig.GhVersions)+'/' + (file ? file : '');
+        return 'https://cdn.jsdelivr.net/gh/' + (window.cnblogsConfig.GhUserName) + '/' + (window.cnblogsConfig.GhRepositories) + '@' + (window.cnblogsConfig.GhVersions) + '/' + (file ? file : '');
     }
 
     // optimization file name
     function setFileNameMin(file, directory) {
         if (typeof file == 'undefined') return '';
-        var suffix  = null,fileArr = file.split('.');
-        if (fileArr.length > 0 && $.inArray(fileArr[(fileArr.length -1)], ['js', 'css']) != -1)
-            {suffix    = fileArr.pop(); directory = suffix;}
+        var suffix = null,
+            fileArr = file.split('.');
+        if (fileArr.length > 0 && $.inArray(fileArr[(fileArr.length - 1)], ['js', 'css']) != -1) {
+            suffix = fileArr.pop();
+            directory = suffix;
+        }
         file.search('.min') == -1 && fileArr.push('min');
         suffix != null && fileArr.push(suffix);
         return (typeof directory !== 'undefined' ? (directory + '/' + fileArr.join('.')) : (fileArr.join('.')));
