--- a/html/sidebar.html
+++ b/html/sidebar.html
@@ -238,16 +238,16 @@
 
         // ---- 页脚配置 ----
         bottomBlogroll: [ // 友情链接，[[链接名,链接]....]
-            // ["王洋", 'http://www.wangyangyang.vip'],
-            ["。思索", 'https://msg.cnblogs.com/wangyang0210'],
-            ["申请坑位", 'https://www.cnblogs.com/adnny/'],
-            ["申请坑位", 'https://www.cnblogs.com/adnny/'],
+            ["测试玉米君", 'https://kwshare.github.io/'],
+            ["。思索", 'https://www.cnblogs.com/wangyang0210'],
+            ["CSDN", 'https://blog.csdn.net/qq125864004'],
+            ["51CTO", 'https://blog.51cto.com/11970781'],
             ["申请坑位", 'https://www.cnblogs.com/adnny/'],
         ],
         bottomText: { // 页脚标语
             icon: "❤️",
             left: "少壮不努力",
-            right: "长大继续学"
+            right: "老大继续学"
         },
 
         // ---- 控制台输出 ----
